@@ -1,7 +1,7 @@
 package com.ducph.mycrm.exception;
 
+import com.ducph.mycrm.constant.AppConstant;
 import com.ducph.mycrm.dto.ErrorResponseDTO;
-import com.ducph.mycrm.util.ApplicationUtils;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.rest.webmvc.ResourceNotFoundException;
 import org.springframework.http.HttpHeaders;
@@ -17,7 +17,6 @@ import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExcep
 import java.sql.Timestamp;
 import java.util.Date;
 import java.util.LinkedHashMap;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 @Slf4j
@@ -27,8 +26,8 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
     public ResponseEntity<ErrorResponseDTO> handleException(ResourceNotFoundException e) {
         var error = new ErrorResponseDTO(
                 HttpStatus.NOT_FOUND.value(),
-                ApplicationUtils.CUSTOMER_NOT_FOUND_MSG,
-                ApplicationUtils.getCurrentDateTime()
+                AppConstant.CUSTOMER_NOT_FOUND_MSG,
+                AppConstant.getCurrentDateTime()
         );
         log.error(e.getMessage());
         return new ResponseEntity<>(error, HttpStatus.NOT_FOUND);
@@ -38,8 +37,8 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
     public ResponseEntity<ErrorResponseDTO> handleException(BadCredentialsException e) {
         var error = new ErrorResponseDTO(
                 HttpStatus.FORBIDDEN.value(),
-                ApplicationUtils.UNAUTHORIZED_ERROR,
-                ApplicationUtils.getCurrentDateTime()
+                AppConstant.UNAUTHORIZED_ERROR,
+                AppConstant.getCurrentDateTime()
         );
         log.error("Authorization failed: " + e.getMessage());
         return new ResponseEntity<>(error, HttpStatus.FORBIDDEN);
@@ -49,8 +48,8 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
     public ResponseEntity<ErrorResponseDTO> handleException(Exception e) {
         var error = new ErrorResponseDTO(
                 HttpStatus.INTERNAL_SERVER_ERROR.value(),
-                ApplicationUtils.SYSTEM_ERROR,
-                ApplicationUtils.getCurrentDateTime()
+                AppConstant.SYSTEM_ERROR,
+                AppConstant.getCurrentDateTime()
         );
         log.error("System error: " + e.getMessage());
         return new ResponseEntity<>(error, HttpStatus.INTERNAL_SERVER_ERROR);
@@ -68,7 +67,7 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
                 .getFieldErrors()
                 .stream()
                 .map(x -> x.getField() + ": " + x.getDefaultMessage())
-                .collect(Collectors.toList());
+                .toList();
 
         body.put("errors", String.valueOf(errors));
         return new ResponseEntity<>(body, headers, status);
